syntax = "proto3";

package test.v1;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FileOptions {
    TestOption file_option = 66666700;
    int32 file_option_1 = 66666708;
    string file_option_2 = 66666709;
    repeated string file_option_n = 66666710;
}

extend google.protobuf.MessageOptions {
    TestOption message_option = 66666700;
    int32 message_option_1 = 66666708;
    string message_option_2 = 66666709;
    repeated string message_option_n = 66666710;
}

extend google.protobuf.FieldOptions {
    TestOption field_option = 66666700;
    int32 field_option_1 = 66666708;
    string field_option_2 = 66666709;
    repeated string field_option_n = 66666710;
}

extend google.protobuf.ServiceOptions {
    TestOption service_option = 66666700;
    int32 service_option_1 = 66666708;
    string service_option_2 = 66666709;
    repeated string service_option_n = 66666710;
}

extend google.protobuf.MethodOptions {
    TestOption method_option = 66666700;
    int32 method_option_1 = 66666708;
    string method_option_2 = 66666709;
    repeated string method_option_n = 66666710;
}

extend google.protobuf.EnumOptions {
    TestOption enum_option = 66666700;
    int32 enum_option_1 = 66666708;
    string enum_option_2 = 66666709;
    repeated string enum_option_n = 66666710;
}

extend google.protobuf.EnumValueOptions {
    TestOption enum_value_option = 66666700;
    int32 enum_value_option_1 = 66666708;
    string enum_value_option_2 = 66666709;
    repeated string enum_value_option_n = 66666710;
}

extend google.protobuf.OneofOptions {
    TestOption oneof_option = 66666700;
    int32 oneof_option_1 = 66666708;
    string oneof_option_2 = 66666709;
    repeated string oneof_option_n = 66666710;
}

message TestOption {
    string single_string = 1;
    repeated string repeated_string = 2;

    int32 single_int32 = 3;
    repeated int32 repeated_int32 = 4;

    int64 single_int64 = 5;

    bytes single_bytes = 8;
    repeated bytes repeated_bytes = 9;

    enum TestEnum {
        ENUM1 = 0;
        ENUM2 = 1;
    }
    TestEnum single_enum = 6;
    TestOption single_message = 7;
}